plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.0'
    id 'io.spring.dependency-management' version '1.1.4'
    // static code analysis
    id "com.github.spotbugs" version "6.0.12"
}

// Note: Dependency scanning is now handled by Trivy in the CI/CD pipeline
// OWASP Dependency-Check plugin removed to avoid NVD API 403 errors


group = 'br.com.authentication'
version = '1.3'

java {
    sourceCompatibility = '21'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // OpenAPI / Swagger UI
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
    
    // Liquibase
    implementation 'org.liquibase:liquibase-core'
    
    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
    
    // Database
    implementation 'mysql:mysql-connector-java:8.0.33'
    
    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    
    // Actuator
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    
    // Testing
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testImplementation 'org.junit.platform:junit-platform-suite'
    testImplementation 'org.mockito:mockito-core'
    testImplementation 'org.mockito:mockito-junit-jupiter'
    testImplementation 'com.h2database:h2'
    testRuntimeOnly 'com.h2database:h2'
}

tasks.named('test') {
    useJUnitPlatform()
}

tasks.withType(com.github.spotbugs.snom.SpotBugsTask).configureEach {
    reports {
        xml.required = false
        html.required = true
    }
    // Don't fail the build on SpotBugs warnings - generate reports but allow build to continue
    ignoreFailures = true
}

/**
 * Spring Boot executable jar customization
 * Output: build/libs/car-reselling-api-1.0.jar
 */
tasks.named('bootJar') {
    archiveBaseName.set('authentication-api')
    archiveVersion.set(project.version.toString())
    archiveClassifier.set('') // no "-plain" or "-all" suffix

    // Optional: if you have multiple main classes, uncomment and set explicitly:
    // mainClass.set('br.com.authentication.AuthenticationApplication')

    manifest {
        attributes(
                'Implementation-Title': 'Authentication API',
                'Implementation-Version': project.version,
                'Implementation-Vendor': project.group
        )
    }

    // Optional: include extra files inside the jar under META-INF/
    // from('LICENSE') { into('META-INF') }
}

/**
 * Disable the plain jar (non-boot) by default to avoid generating two artifacts.
 * If you WANT the plain jar too, change enabled = true.
 */
tasks.named('jar') {
    enabled = false
    archiveBaseName.set('authentication-api')
    archiveVersion.set(project.version.toString())
    archiveClassifier.set('plain')
}